[package]
name = "oisuite"
version = "1.0.0"
edition = "2021"
authors = ["Querter-chan#6666"]
description = "Suite for testing algorithm problems"
readme = "README.md"
repository = "https://www.github.com/querterdesu/oisuite"
license = "MIT"
keywords = ["education", "testing", "algorithm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
home = "0.5.3"